qt4-x11 (4:4.8.7+dfsg-7) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 21 Mar 2016 21:26:26 +0100

qt4-x11 (4:4.8.7+dfsg-6) unstable; urgency=medium

  * Add Eduard Sanou's backport patch from qttools5 to make qch files
    reproducible by replacing the current time by a fixed date
    (Closes: #814280). Thanks Eduard!
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 10 Feb 2016 11:05:32 -0300

qt4-x11 (4:4.8.7+dfsg-5) unstable; urgency=medium

  * Add no-ssl3.patch to avoid calling SSLv3 functions as they have been removed
    from Debian's packaging (Closes: #806505).
  * Update symbols files with buildds' logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 30 Nov 2015 16:13:32 -0300

qt4-x11 (4:4.8.7+dfsg-4) unstable; urgency=medium

  [ Rico Tzschichholz ]
  * Change the libicu52 suggestion in libqtcore4 to libicu55.

  [ Dmitry Shachnev ]
  * Update symbols files with buildds' logs.
  * Remove sparc references from symbols files.
    Sparc is dead and we no longer have build logs for it.
  * Use canonical Vcs-Browser link.
  * Update git clone address in README.source.
  * Do not recommend libqtwebkit-dev, we want to remove this package.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Move qt4-default to section libs, it's definitely not part of libdevel
    as it controls run time preferences.
  * Add qt-at-spi as a libqtgui4 recommendation as discussed in pkg-kde-talk.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 17 Nov 2015 12:50:47 -0300

qt4-x11 (4:4.8.7+dfsg-3) unstable; urgency=medium

  * Update symbols files with buildds' logs.
  * Upload to unstable (Closes: #794517).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Tue, 04 Aug 2015 18:13:53 -0300

qt4-x11 (4:4.8.7+dfsg-2) experimental; urgency=medium

  * Add Daniel Schepler's QtScript_x32_config.diff and x32.diff to let Qt4