@@ -2,6 +2,3 @@ usr/lib/*/libQtCLucene.so.*
 usr/lib/*/libQtCore.so.*
 usr/lib/*/qt-default/qtchooser/default.conf
 usr/lib/*/qt4/plugins/codecs/*.so
-usr/lib/*/qtchooser/4.conf
-usr/lib/*/qtchooser/qt4.conf
-usr/share/qtchooser/qt4-*.conf
