@@ -314,16 +314,8 @@ override_dh_auto_install:
 	# by the libjs-jquery package.
 	rm -fv debian/tmp/usr/share/qt4/doc/html/scripts/jquery.js
 
-	# Add a configuration for qtchooser
-	mkdir -p $(CURDIR)/debian/tmp/usr/share/qtchooser
-	echo "/usr/lib/$(DEB_HOST_MULTIARCH)/qt4/bin" > $(CURDIR)/debian/tmp/usr/share/qtchooser/qt4-$(DEB_HOST_MULTIARCH).conf
-	echo "/usr/lib/$(DEB_HOST_MULTIARCH)" >> $(CURDIR)/debian/tmp/usr/share/qtchooser/qt4-$(DEB_HOST_MULTIARCH).conf
-
-	# Ship 4.conf and qt4.conf for this arch, and a default.conf.
-	# 4.conf makes calling qtchooser prettier.
+	# Configuration file for qt4-default package
 	mkdir -p $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qtchooser
-	ln -s /usr/share/qtchooser/qt4-$(DEB_HOST_MULTIARCH).conf $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qtchooser/4.conf
-	ln -s /usr/share/qtchooser/qt4-$(DEB_HOST_MULTIARCH).conf $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qtchooser/qt4.conf
 	ln -s /usr/share/qtchooser/qt4-$(DEB_HOST_MULTIARCH).conf $(CURDIR)/debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/qtchooser/default.conf
 
 	# As a special case to avoid FTBFSs for current Qt4 packages, ship a second
