@@ -1,5 +1,8 @@
 qt4-x11 (4:4.8.7+dfsg-7) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Move qtchooser configuration files (except the qt-default one) from
+    libqtcore4 to qtchooser itself.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 21 Mar 2016 21:26:26 +0100
 
